--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/multer": "^1.4.3",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "mongoose": "^5.9.15",
+    "multer": "^1.4.2",
+    "papaparse": "^5.2.0",
+    "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
