--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/multer": "^1.4.3",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
